# mock-wp-cdk

./: .env.example  README.md  app.py  pyproject.toml
stacks/: mock_wp_stack.py
